Split test steps

--- a/circle.yml
+++ b/circle.yml
@@ -4,4 +4,6 @@ machine:
 test:
   override:
     - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-    - make build test push
+    - make build
+    - make test
+    - make push
